Fix alignment for footer content for mobile view
As per the design for mobile view we want the footer contents to be
center aligned and also want the copyright section to be laid out at the
end.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -665,6 +665,24 @@ body {
   .content {
     max-width: 90%;
   }
+
+  .footer-wrapper {
+    .footer-details {
+      justify-content: space-around;
+
+      .conf-image {
+        order: 1
+      }
+
+      .copyright-details {
+        order: 3
+       }
+
+      .social-media-details {
+        order: 2
+      }
+    }
+  }
 }
 
 @media (max-width: 512px) {
